--- a/config.env.example
+++ b/config.env.example
@@ -1,15 +1,12 @@
-# ================= 基础 =================
+# ===== 基本域名 =====
 DOMAIN=blog.aa.com
+
+# ===== V2Ray =====
 WS_PATH=/connect
+USERS=3
 NAME=halo
 
-# ================= VLESS =================
-USERS=3
-
-# ================= LunaTV =================
-LUNATV_USER=admin
-
-# ================= NPM =================
+# ===== NPM 端口 =====
 NPM_HTTP_PORT=80
 NPM_HTTPS_PORT=443
 NPM_ADMIN_PORT=81
